--- a/ProjectCollection.json
+++ b/ProjectCollection.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"_postman_id": "01b7ff39-4692-4c10-8039-be0e63b51c19",
+		"_postman_id": "351fa68c-3019-4890-bf10-1be5b54cd06f",
 		"name": "FinalProjectDjango",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
 		"_exporter_id": "19909125"
@@ -29,7 +29,7 @@
 								},
 								{
 									"key": "email",
-									"value": "mohamed@gmail.com",
+									"value": "omara@gmail.com",
 									"type": "text"
 								},
 								{
@@ -44,12 +44,12 @@
 								},
 								{
 									"key": "phone",
-									"value": "01001025555",
+									"value": "01001011125",
 									"type": "text"
 								},
 								{
 									"key": "ssn",
-									"value": "12345678912342",
+									"value": "12345578912308",
 									"type": "text"
 								},
 								{
@@ -78,7 +78,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"email\":\"mohamed@gmail.com\",\r\n    \"password\":\"Mohamed12345\"\r\n}",
+							"raw": "{\r\n    \"email\":\"martm7726@gmail.com\",\r\n    \"password\":\"Mohamed12345\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -107,7 +107,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 940fd415ef56715509902e37ab29cc1abd2670b0",
+								"value": "Token 025cebfbdba90a1df687d3d0be1b447ce57b18e3",
 								"type": "text"
 							}
 						],
@@ -115,6 +115,44 @@
 							"raw": "{{BaseUrl}}profile/",
 							"host": [
 								"{{BaseUrl}}profile"
+							],
+							"path": [
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "Change_Password",
+					"request": {
+						"method": "PATCH",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token adaa39bc6fefed7de0ef02bf79ebec006c213879",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "old_password",
+									"value": "Mohamed123456",
+									"type": "text"
+								},
+								{
+									"key": "new_password",
+									"value": "Mohamed12345",
+									"type": "text"
+								}
+							]
+						},
+						"url": {
+							"raw": "{{BaseUrl}}changePassword/",
+							"host": [
+								"{{BaseUrl}}changePassword"
 							],
 							"path": [
 								""
@@ -157,7 +195,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token b597fa852283c3fd2036555b3e409b9e6e9ae008",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
 								"type": "text"
 							}
 						],
@@ -238,7 +276,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 940fd415ef56715509902e37ab29cc1abd2670b0",
+								"value": "Token aa12cbf80464b73ab934499db108b5c415443683",
 								"type": "text"
 							}
 						],
@@ -289,7 +327,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 0d2baf8685cf49e7d21ae1989e04d504a56b7aa6",
+								"value": "Token 5fa78713af7c01e191b95b2a6c9a25666399b318",
 								"type": "text"
 							}
 						],
@@ -312,7 +350,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 4acd6ea21fd518db0cf20dd4aedbecd919dc9034",
+								"value": "Token 2e1f009d302cb6bc93edaf9526f8ee6d81bca52b",
 								"type": "text"
 							}
 						],
@@ -361,7 +399,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 4acd6ea21fd518db0cf20dd4aedbecd919dc9034",
+								"value": "Token 5fa78713af7c01e191b95b2a6c9a25666399b318",
 								"type": "text"
 							}
 						],
@@ -370,22 +408,52 @@
 							"formdata": [
 								{
 									"key": "prodName",
-									"value": "drdtfv",
-									"type": "text"
-								},
-								{
-									"key": "prodPrice",
-									"value": "500.00",
+									"value": "ProductDemoCHERRYBERRY",
 									"type": "text"
 								},
 								{
 									"key": "prodDescription",
-									"value": "hhygbj",
+									"value": "ProductDemoDesc",
 									"type": "text"
 								},
 								{
 									"key": "prodSubCategory",
-									"value": "1",
+									"value": "2",
+									"type": "text"
+								},
+								{
+									"key": "prodStock",
+									"value": "11",
+									"type": "text"
+								},
+								{
+									"key": "prodImageThumbnail",
+									"type": "file",
+									"src": "/C:/Users/Mohamed Omara/Downloads/55.png"
+								},
+								{
+									"key": "prodImageOne",
+									"type": "file",
+									"src": "/C:/Users/Mohamed Omara/Downloads/555.png"
+								},
+								{
+									"key": "prodImageTwo",
+									"type": "file",
+									"src": "/C:/Users/Mohamed Omara/Downloads/55.png"
+								},
+								{
+									"key": "prodImageThree",
+									"type": "file",
+									"src": "/C:/Users/Mohamed Omara/Downloads/555.png"
+								},
+								{
+									"key": "prodImageFour",
+									"type": "file",
+									"src": "/C:/Users/Mohamed Omara/Downloads/55.png"
+								},
+								{
+									"key": "prodPrice",
+									"value": "500.00",
 									"type": "text"
 								},
 								{
@@ -394,9 +462,9 @@
 									"type": "text"
 								},
 								{
-									"key": "prodImageThumbnail",
-									"type": "file",
-									"src": "/E:/photo/Anime/273995.jpg"
+									"key": "prodDiscountPercentage",
+									"value": "20",
+									"type": "text"
 								}
 							]
 						},
@@ -420,7 +488,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "Token 0d2baf8685cf49e7d21ae1989e04d504a56b7aa6",
+								"value": "Token 5fa78713af7c01e191b95b2a6c9a25666399b318",
 								"type": "text"
 							}
 						],
@@ -429,43 +497,49 @@
 							"formdata": [
 								{
 									"key": "prodName",
-									"value": "pro1",
+									"value": "ProductDemo",
 									"type": "text"
 								},
 								{
 									"key": "prodPrice",
-									"value": "555.00",
+									"value": "55000.00",
 									"type": "text"
 								},
 								{
 									"key": "prodDescription",
-									"value": "pro1",
+									"value": "ProductDemoDesc",
 									"type": "text"
 								},
 								{
 									"key": "prodSubCategory",
-									"value": "3",
+									"value": "1",
 									"type": "text"
 								},
 								{
 									"key": "prodOnSale",
-									"value": "false",
+									"value": "true",
 									"type": "text"
 								},
 								{
 									"key": "prodImageThumbnail",
 									"type": "file",
-									"src": "/E:/photo/Anime/273995.jpg"
+									"src": "/C:/Users/Khaled ElGabry/Downloads/pmedia/04302404800-e3.jpg",
+									"disabled": true
+								},
+								{
+									"key": "prodDiscountPercentage",
+									"value": "25",
+									"type": "text"
 								}
 							]
 						},
 						"url": {
-							"raw": "{{BaseUrl}}product/18/",
+							"raw": "{{BaseUrl}}product/1/",
 							"host": [
 								"{{BaseUrl}}product"
 							],
 							"path": [
-								"18",
+								"1",
 								""
 							]
 						}
@@ -497,7 +571,7 @@
 					"response": []
 				},
 				{
-					"name": "All_Main_Categories",
+					"name": "All_Categories",
 					"request": {
 						"method": "GET",
 						"header": [],
@@ -515,7 +589,7 @@
 					"response": []
 				},
 				{
-					"name": "Main_Category_Details",
+					"name": "Category_Details",
 					"request": {
 						"method": "GET",
 						"header": [],
@@ -534,7 +608,7 @@
 					"response": []
 				},
 				{
-					"name": "All_Sub_Categories",
+					"name": "All_SubCategories",
 					"request": {
 						"method": "GET",
 						"header": [],
@@ -552,7 +626,7 @@
 					"response": []
 				},
 				{
-					"name": "Sub_Category_Details",
+					"name": "SubCategory_Details",
 					"request": {
 						"method": "GET",
 						"header": [],
@@ -564,6 +638,367 @@
 							"path": [
 								"subcategory",
 								"4",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "Vendor_Products",
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token 328c1328827876c72c8b4774261d0b98a67b0bf4",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}product/vendor/4/",
+							"host": [
+								"{{BaseUrl}}product"
+							],
+							"path": [
+								"vendor",
+								"4",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "Last_10_Created",
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token 0ac55ec786e24a61c98d08d7cf4b7c913a24d81a",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}product/lastProducts/",
+							"host": [
+								"{{BaseUrl}}product"
+							],
+							"path": [
+								"lastProducts",
+								""
+							]
+						}
+					},
+					"response": []
+				}
+			]
+		},
+		{
+			"name": "Cart",
+			"item": [
+				{
+					"name": "Add_ToCart",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "item",
+									"value": "2",
+									"type": "text"
+								},
+								{
+									"key": "quantity",
+									"value": "2",
+									"type": "text"
+								}
+							]
+						},
+						"url": {
+							"raw": "{{BaseUrl}}cart/add/",
+							"host": [
+								"{{BaseUrl}}cart"
+							],
+							"path": [
+								"add",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "List_CartItems",
+					"protocolProfileBehavior": {
+						"disableBodyPruning": true
+					},
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "formdata",
+							"formdata": []
+						},
+						"url": {
+							"raw": "{{BaseUrl}}cart/list/",
+							"host": [
+								"{{BaseUrl}}cart"
+							],
+							"path": [
+								"list",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "Add_more",
+					"request": {
+						"method": "PUT",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token c48984876bb0c7659830e970e82ed96a2dffa8ce",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}cart/addmore/1",
+							"host": [
+								"{{BaseUrl}}cart"
+							],
+							"path": [
+								"addmore",
+								"1"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "Remove_From_Cart",
+					"request": {
+						"method": "PUT",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token c48984876bb0c7659830e970e82ed96a2dffa8ce",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}cart/remove/1",
+							"host": [
+								"{{BaseUrl}}cart"
+							],
+							"path": [
+								"remove",
+								"1"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "DeleteItem",
+					"request": {
+						"method": "DELETE",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token c48984876bb0c7659830e970e82ed96a2dffa8ce",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}cart/delete/1",
+							"host": [
+								"{{BaseUrl}}cart"
+							],
+							"path": [
+								"delete",
+								"1"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "DeleteAllProducts",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				}
+			]
+		},
+		{
+			"name": "order",
+			"item": [
+				{
+					"name": "NewOrder",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "DeleteOrder",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "UpdateOrder",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "GetOrder",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "GetOrders",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "payment",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": ""
+						}
+					},
+					"response": []
+				}
+			]
+		},
+		{
+			"name": "favourit",
+			"item": [
+				{
+					"name": "AddFav",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "formdata",
+							"formdata": []
+						},
+						"url": {
+							"raw": "{{BaseUrl}}favourit/add-to-favorite/2/",
+							"host": [
+								"{{BaseUrl}}favourit"
+							],
+							"path": [
+								"add-to-favorite",
+								"2",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "ListFav",
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}favourit/user-favorite/",
+							"host": [
+								"{{BaseUrl}}favourit"
+							],
+							"path": [
+								"user-favorite",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "removeFav",
+					"request": {
+						"method": "DELETE",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "Token f28f3ba8b6f96c40aa43c7334a82cd2e6e6ba0c5",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{BaseUrl}}favourit/remove-from-favorite/1/",
+							"host": [
+								"{{BaseUrl}}favourit"
+							],
+							"path": [
+								"remove-from-favorite",
+								"1",
 								""
 							]
 						}
